@@ -7,18 +7,21 @@ import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertNull;
 import static org.junit.Assert.assertTrue;
 import static org.junit.Assert.fail;
+import static ua.com.fielden.platform.types.try_wrapper.TryWrapper.Try;
 
 import java.beans.PropertyChangeEvent;
 import java.beans.PropertyChangeListener;
 import java.lang.annotation.Annotation;
-import java.lang.reflect.Method;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Date;
 import java.util.List;
 import java.util.Set;
+import java.util.concurrent.CountDownLatch;
 
+import org.apache.commons.lang.exception.ExceptionUtils;
 import org.junit.Before;
+import org.junit.Ignore;
 import org.junit.Test;
 
 import com.google.inject.Injector;
@@ -28,17 +31,18 @@ import ua.com.fielden.platform.associations.one2many.incorrect.MasterEntity2;
 import ua.com.fielden.platform.associations.one2many.incorrect.MasterEntity3;
 import ua.com.fielden.platform.associations.one2many.incorrect.MasterEntity4;
 import ua.com.fielden.platform.associations.one2many.incorrect.MasterEntity6;
+import ua.com.fielden.platform.entity.exceptions.EntityDefinitionException;
 import ua.com.fielden.platform.entity.factory.EntityFactory;
 import ua.com.fielden.platform.entity.factory.IMetaPropertyFactory;
-import ua.com.fielden.platform.entity.ioc.ObservableMutatorInterceptor;
 import ua.com.fielden.platform.entity.meta.MetaProperty;
+import ua.com.fielden.platform.entity.proxy.EntityProxyContainer;
+import ua.com.fielden.platform.entity.proxy.TgOwnerEntity;
 import ua.com.fielden.platform.entity.validation.HappyValidator;
 import ua.com.fielden.platform.entity.validation.annotation.ValidationAnnotation;
 import ua.com.fielden.platform.error.Result;
 import ua.com.fielden.platform.error.Warning;
 import ua.com.fielden.platform.ioc.ApplicationInjectorFactory;
 import ua.com.fielden.platform.reflection.Finder;
-import ua.com.fielden.platform.reflection.Reflector;
 import ua.com.fielden.platform.reflection.TitlesDescsGetter;
 import ua.com.fielden.platform.reflection.test_entities.SecondLevelEntity;
 import ua.com.fielden.platform.reflection.test_entities.SimplePartEntity;
@@ -46,6 +50,8 @@ import ua.com.fielden.platform.reflection.test_entities.UnionEntityForReflector;
 import ua.com.fielden.platform.test.CommonTestEntityModuleWithPropertyFactory;
 import ua.com.fielden.platform.test.EntityModuleWithPropertyFactory;
 import ua.com.fielden.platform.types.Money;
+import ua.com.fielden.platform.types.either.Either;
+import ua.com.fielden.platform.types.either.Left;
 import ua.com.fielden.platform.utils.PropertyChangeSupportEx.PropertyChangeOrIncorrectAttemptListener;
 
 /**
@@ -68,13 +74,13 @@ public class AbstractEntityTest {
         module.getDomainValidationConfig().setValidator(Entity.class, "doubles", new HappyValidator());
         module.getDomainValidationConfig().setValidator(Entity.class, "number", new HappyValidator() {
             @Override
-            public Result handle(final MetaProperty<Object> property, final Object newValue, final Object oldValue, final Set<Annotation> mutatorAnnotations) {
+            public Result handle(final MetaProperty<Object> property, final Object newValue, final Set<Annotation> mutatorAnnotations) {
                 if (newValue != null && newValue.equals(35)) {
                     return new Result(property, new Exception("Domain : Value 35 is not permitted."));
                 } else if (newValue != null && newValue.equals(77)) {
                     return new Warning("DOMAIN validation : The value of 77 is dangerous.");
                 }
-                return super.handle(property, newValue, oldValue, mutatorAnnotations);
+                return super.handle(property, newValue, mutatorAnnotations);
             }
         });
     }
@@ -193,27 +199,29 @@ public class AbstractEntityTest {
     }
 
     @Test
-    public void testThatFinalValidationWorks() {
-        entity.setFinalProperty(null);
-        assertTrue("Property finalProperty validation failed when assigning null.", entity.getProperty("finalProperty").isValid());
+    public void final_property_for_non_persistent_entity_can_only_be_assigned_once() {
+        assertTrue(entity.getProperty("finalProperty").isEditable());
         entity.setFinalProperty(60.0);
-        assertTrue("Property finalProperty validation failed when assigning non-null value for the first time.", entity.getProperty("finalProperty").isValid());
+        assertTrue(entity.getProperty("finalProperty").isValid());
+        assertEquals(Double.valueOf(60.0), entity.getFinalProperty());
+        assertFalse(entity.getProperty("finalProperty").isEditable());
+        
         entity.setFinalProperty(31.0);
-        assertTrue("Property finalProperty validation failed when assigning non-null value the second time for non-persistent entity.", entity.getProperty("finalProperty").isValid());
-
-        // making entity "persistent"
-        try {
-            final Method method = Reflector.getMethod(AbstractEntity.class, "setId", Long.class);
-            method.setAccessible(true);
-            method.invoke(entity, 1L);
-            method.setAccessible(false);
-        } catch (final Exception e) {
-            fail(e.getMessage());
-        }
-        entity.setFinalProperty(35.0);
-        assertFalse("Property finalProperty validation failed when assigning non-null value the second time for persistent entity.", entity.getProperty("finalProperty").isValid());
-        assertEquals("Incorrect value for last invalid value.", new Double(35.0), entity.getProperty("finalProperty").getLastInvalidValue());
+        assertFalse(entity.getProperty("finalProperty").isValid());
+        assertEquals(Double.valueOf(60.0), entity.getFinalProperty());
+        assertFalse(entity.getProperty("finalProperty").isEditable());
     }
+    
+    @Test
+    public void persistentOnly_final_property_for_non_persistent_entity_yields_invalid_definition() {
+        final Either<Exception, EntityInvalidDefinition> result = Try(() -> factory.newEntity(EntityInvalidDefinition.class, "key", "desc"));
+        assertTrue(result instanceof Left);
+        final Throwable rootCause = ExceptionUtils.getRootCause(((Left<Exception, EntityInvalidDefinition>) result).value);
+        assertTrue(rootCause instanceof EntityDefinitionException);
+        assertEquals(format("Non-persistent entity [%s] has property [%s], which is incorrectly annotated with @Final(persistentOnly = true).", EntityInvalidDefinition.class.getSimpleName(), "firstProperty"),
+                rootCause.getMessage());
+    }
+    
 
     @Test
     public void testNewEntityWithDynamicKey() {
@@ -291,7 +299,6 @@ public class AbstractEntityTest {
      * <ul>
      * <li>meta-property has correct validators (determination of validators is done by {@link IMetaPropertyFactory})
      * <li>changes done through mutators are observed
-     * <li>meta-property correctly records old and new sizes correctly (this is actually done by {@link ObservableMutatorInterceptor}))
      * <li>validators are provided with correct values (this is actually done by {@link ValidationMutatorInterceptor})), which is checked indirectly
      * </ul>
      */
@@ -315,8 +322,14 @@ public class AbstractEntityTest {
         entity.setDoubles(Arrays.asList(new Double[] { 2.0 }));
 
         assertEquals("Property should have been observed.", true, observed);
-        assertNull("Incorrect original value", doublesProperty.getCollectionOrigSize());
-        assertEquals("Incorrect previous value", 2, doublesProperty.getCollectionPrevSize());
+        
+        assertNull("Incorrect original value", doublesProperty.getOriginalValue());
+        assertTrue("Incorrect isChangedFrom original.", doublesProperty.isChangedFromOriginal());
+        assertEquals("Incorrect previous value", Arrays.asList(new Double[] { 2.0, 3.0 }), doublesProperty.getPrevValue());
+        assertTrue("Incorrect isChangedFrom previous.", doublesProperty.isChangedFromPrevious());
+        assertTrue("Incorrect isDirty.", doublesProperty.isDirty());
+        assertTrue("Incorrect isDirty for whole entity.", entity.isDirty());
+        
         assertNotNull("There should be domain validation result at this stage.", doublesProperty.getValidationResult(ValidationAnnotation.DOMAIN));
         assertTrue("Domain validation result should be successful.", doublesProperty.getValidationResult(ValidationAnnotation.DOMAIN).isSuccessful());
         assertNotNull("There should be a requiredness validation result at this stage.", doublesProperty.getValidationResult(ValidationAnnotation.REQUIRED));
@@ -332,7 +345,6 @@ public class AbstractEntityTest {
      * <ul>
      * <li>meta-property has correct validators (determination of validators is done by {@link IMetaPropertyFactory})
      * <li>changes done through mutators are observed
-     * <li>meta-property correctly records old and new sizes correctly (this is actually done by {@link ObservableMutatorInterceptor}))
      * <li>validators are provided with correct values (this is actually done by {@link ValidationMutatorInterceptor})), which is checked indirectly
      * </ul>
      */
@@ -353,8 +365,14 @@ public class AbstractEntityTest {
 
         assertEquals("Property should have been observed.", true, observed);
         assertEquals("Incorrect size for doubles", 3, entity.getDoubles().size());
-        assertNull("Incorrect original value", doublesProperty.getCollectionOrigSize());
-        assertEquals("Incorrect previous value", 2, doublesProperty.getCollectionPrevSize());
+
+        assertNull("Incorrect original value", doublesProperty.getOriginalValue());
+        assertTrue("Incorrect isChangedFrom original.", doublesProperty.isChangedFromOriginal());
+        assertEquals("Incorrect previous value", Arrays.asList(new Double[] { -2.0, -3.0 }), doublesProperty.getPrevValue());
+        assertTrue("Incorrect isChangedFrom previous.", doublesProperty.isChangedFromPrevious());
+        assertTrue("Incorrect isDirty.", doublesProperty.isDirty());
+        assertTrue("Incorrect isDirty for whole entity.", entity.isDirty());
+        
         assertNotNull("There should be a domain validation result.", doublesProperty.getValidationResult(ValidationAnnotation.DOMAIN));
         assertNotNull("There should be requiredness validation result at this stage.", doublesProperty.getValidationResult(ValidationAnnotation.REQUIRED));
         assertTrue("Requiredness validation result should be successful.", doublesProperty.getValidationResult(ValidationAnnotation.REQUIRED).isSuccessful());
@@ -370,7 +388,6 @@ public class AbstractEntityTest {
      * <ul>
      * <li>meta-property has correct validators (determination of validators is done by {@link IMetaPropertyFactory})
      * <li>changes done through mutators are observed
-     * <li>meta-property correctly records old and new sizes correctly (this is actually done by {@link ObservableMutatorInterceptor}))
      * <li>validators are provided with correct values (this is actually done by {@link ValidationMutatorInterceptor})), which is checked indirectly
      * </ul>
      */
@@ -391,8 +408,14 @@ public class AbstractEntityTest {
 
         assertTrue("Property should have been observed.", observed);
         assertEquals("Incorrect size for doubles", 1, entity.getDoubles().size());
-        assertNull("Incorrect original value", doublesProperty.getCollectionOrigSize());
-        assertEquals("Incorrect previous value", 2, doublesProperty.getCollectionPrevSize());
+        
+        assertNull("Incorrect original value", doublesProperty.getOriginalValue());
+        assertTrue("Incorrect isChangedFrom original.", doublesProperty.isChangedFromOriginal());
+        assertEquals("Incorrect previous value", Arrays.asList(new Double[] { -2.0, -3.0 }), doublesProperty.getPrevValue());
+        assertTrue("Incorrect isChangedFrom previous.", doublesProperty.isChangedFromPrevious());
+        assertTrue("Incorrect isDirty.", doublesProperty.isDirty());
+        assertTrue("Incorrect isDirty for whole entity.", entity.isDirty());
+        
         assertNotNull("There should be domain validation result at this stage.", doublesProperty.getValidationResult(ValidationAnnotation.DOMAIN));
         assertTrue("Domain validation result should be successful.", doublesProperty.getValidationResult(ValidationAnnotation.DOMAIN).isSuccessful());
         assertNotNull("There should be requiredness validation result.", doublesProperty.getValidationResult(ValidationAnnotation.REQUIRED));
@@ -878,7 +901,6 @@ public class AbstractEntityTest {
     @Test
     public void test_copy_for_entities_with_dynamic_key() {
         final CorrectEntityWithDynamicEntityKey one = factory.newEntity(CorrectEntityWithDynamicEntityKey.class, 1L);
-        ;
         one.property1 = 38L;
         one.property2 = 98L;
         final DynamicEntityKey keyOne = new DynamicEntityKey(one);
@@ -912,9 +934,9 @@ public class AbstractEntityTest {
     }
 
     @Test
-    public void test_copy_from_non_instrumented_instance() {
+    public void copy_from_non_instrumented_instance_is_also_non_instrumented() {
         final Entity entity = new Entity();
-        entity.setEntityFactory(factory); // factory is required at all times
+        entity.setVersion(42L);
         entity.setId(1L);
         entity.setKey("key");
         entity.setDesc("description");
@@ -923,15 +945,71 @@ public class AbstractEntityTest {
         final Entity copy = entity.copy(Entity.class);
 
         assertEquals("Copy does not equal to the original instance", entity, copy);
-        assertFalse("Should have not been dirty", copy.isDirty());
-        assertEquals("Property id does not match", entity.getId(), copy.getId());
+        assertFalse("Copy is instrumented", copy.isInstrumented());
+        assertEquals("IDs do not match", entity.getId(), copy.getId());
+        assertEquals("Versions do not match.", Long.valueOf(42L), copy.getVersion());
         assertEquals("Property desc does not match", entity.getDesc(), copy.getDesc());
         assertEquals("Property money does not match", entity.getMoney(), copy.getMoney());
     }
+    
+    @Test
+    public void copy_from_instrumented_instance_is_also_instrumented() {
+        final Entity entity = factory.newEntity(Entity.class);
+        entity.setVersion(42L);
+        entity.setId(1L);
+        entity.setKey("key");
+        entity.setDesc("description");
+        entity.setMoney(new Money("23.25"));
 
+        final Entity copy = entity.copy(Entity.class);
+
+        assertEquals("Copy does not equal to the original instance", entity, copy);
+        assertTrue("Copy is not instrumented", copy.isInstrumented());
+        assertFalse("Copy is dirty", copy.isDirty());
+        assertEquals("IDs do not match", entity.getId(), copy.getId());
+        assertEquals("Versions do not match.", Long.valueOf(42L), copy.getVersion());
+        assertEquals("Property desc does not match", entity.getDesc(), copy.getDesc());
+        assertEquals("Property money does not match", entity.getMoney(), copy.getMoney());
+    }
+    
+    @Test
+    public void copy_from_uninstrumented_proxied_instance_is_also_uninstrumented_and_proxied() {
+        final Class<? extends Entity> type = EntityProxyContainer.proxy(Entity.class, "firstProperty", "monitoring", "observableProperty");
+        
+        final Entity entity = EntityFactory.newPlainEntity(type, 12L);
+        entity.setVersion(42L);
+        entity.setKey("key");
+        entity.setDesc("description");
+
+        final Entity copy = entity.copy(type);
+        assertEquals("Copy does not equal to the original instance", entity, copy);
+        assertFalse("Copy is instrumented", copy.isInstrumented());
+        assertEquals("Property id does not match", entity.getId(), copy.getId());
+        assertEquals("Versions should match.", Long.valueOf(42L), copy.getVersion());
+        assertEquals("Property desc does not match", entity.getDesc(), copy.getDesc());
+        assertEquals("Proxied properties do not match", entity.proxiedPropertyNames(), copy.proxiedPropertyNames());
+    }
 
     @Test
-    public void test_equals_for_instances_of_the_same_type_with_the_same_key_values() {
+    public void copy_from_instrumented_proxied_instance_is_also_instrumented_and_proxied() {
+        final Class<? extends Entity> type = EntityProxyContainer.proxy(Entity.class, "firstProperty", "monitoring", "observableProperty");
+        
+        final Entity entity = factory.newEntity(type, 12L);
+        entity.setVersion(42L);
+        entity.setKey("key");
+        entity.setDesc("description");
+
+        final Entity copy = entity.copy(type);
+        assertEquals("Copy does not equal to the original instance", entity, copy);
+        assertTrue("Copy is not instrumented", copy.isInstrumented());
+        assertEquals("Property id does not match", entity.getId(), copy.getId());
+        assertEquals("Versions should match.", Long.valueOf(42L), copy.getVersion());
+        assertEquals("Property desc does not match", entity.getDesc(), copy.getDesc());
+        assertEquals("Proxied properties do not match", entity.proxiedPropertyNames(), copy.proxiedPropertyNames());
+    }
+
+    @Test
+    public void two_instances_of_the_same_type_with_the_same_key_values_are_equal() {
         final Entity thisEntity = factory.newEntity(Entity.class, 1L);
         thisEntity.setKey("key");
         final Entity thatEntity = factory.newEntity(Entity.class, 2L);
@@ -1035,16 +1113,23 @@ public class AbstractEntityTest {
     public void test_entity_locking_during_validation_of_its_property() throws Exception {
         final EntityWithLocableProperty entity = factory.newEntity(EntityWithLocableProperty.class);
 
+        // the latch is used to ensure that the changingThread has started and executed setLockPropertyValidation(true) before continuing
+        final CountDownLatch latch = new CountDownLatch(1);
+
         // changing property happens on a separate thread
         final Thread changingThread = new Thread(new Runnable() {
             @Override
             public void run() {
                 // this call should put setting into a long running mode until property validation is unlocked
                 entity.setLockPropertyValidation(true);
+                latch.countDown(); // release the latch, notifying the main thread that it can proceed
                 entity.setLockableProperty(Money.zero);
             }
         });
         changingThread.start();
+
+        // wait for changingThread...
+        latch.await();
 
         // validation happens on a separate thread
         final Thread validationThread = new Thread(new Runnable() {
@@ -1071,6 +1156,7 @@ public class AbstractEntityTest {
         assertNotNull(entity.isValid().isSuccessful());
     }
 
+    @Ignore
     @Test
     public void test_entity_locking_during_its_validation() throws Exception {
         final EntityWithLocableValidation entity = factory.newEntity(EntityWithLocableValidation.class);
